pike7.6 (7.6.93-1) unstable; urgency=low

  * The latest cvs snapshot

 -- Marek Habersack <grendel@debian.org>  Mon, 2 Oct 2006 15:22:05 +0200

pike7.6 (7.6.92-1) unstable; urgency=low

  * Release number bumped by export.pike.

 -- Marek Habersack <grendel@debian.org>  Mon, 2 Oct 2006 15:20:43 +0200

pike7.6 (7.6.91-1) unstable; urgency=low

  * The latest cvs snapshot

 -- Marek Habersack <grendel@debian.org>  Thu, 14 Sep 2006 14:44:33 +0200

pike7.6 (7.6.90-1) unstable; urgency=low

  * Release number bumped by export.pike.

 -- Marek Habersack <grendel@debian.org>  Thu, 14 Sep 2006 14:42:53 +0200

pike7.6 (7.6.89-1) unstable; urgency=low

  * The latest cvs snapshot

 -- Marek Habersack <grendel@debian.org>  Tue, 22 Aug 2006 18:26:40 +0200

pike7.6 (7.6.88-1) unstable; urgency=low

  * Release number bumped by export.pike.

 -- Marek Habersack <grendel@debian.org>  Tue, 22 Aug 2006 18:16:59 +0200

pike7.6 (7.6.87-2) unstable; urgency=low

  * Shortened the long descriptions of several binary packages
  * Added short description of pike, plus an url, to the description of
    the pike modules binary packages

 -- Marek Habersack <grendel@debian.org>  Sun, 9 Aug 2006 01:28:37 +0200

pike7.6 (7.6.87-1) unstable; urgency=low

  * The latest cvs snapshot

 -- Marek Habersack <grendel@debian.org>  Sun, 4 Jun 2006 22:21:07 +0200

pike7.6 (7.6.86-1) unstable; urgency=low

  * Release number bumped by export.pike.

 -- Marek Habersack <grendel@debian.org>  Sun, 4 Jun 2006 22:17:43 +0200

pike7.6 (7.6.85-1) unstable; urgency=low

  * The latest cvs snapshot

 -- Marek Habersack <grendel@debian.org>  Sun, 4 Jun 2006 15:33:52 +0200

pike7.6 (7.6.84-1) unstable; urgency=low

  * Release number bumped by export.pike.

 -- Marek Habersack <grendel@debian.org>  Sun, 4 Jun 2006 15:29:49 +0200

pike7.6 (7.6.83-1) unstable; urgency=low

  * The latest cvs snapshot

 -- Marek Habersack <grendel@debian.org>  Thu, 1 Jun 2006 10:29:09 +0200

pike7.6 (7.6.82-1) unstable; urgency=low
